# Diff_AI

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  start_web_app.bat  start_web_app.py
differences_between_two_images/: main.py
differences_between_two_images/helpers/: utils.py
differences_between_two_images/services/: image_comparison_service.py
static/: index.html  script.js  styles.css
tests/: test_api.py
