[tool.poetry]
name = "differences-between-two-images"
version = "0.1.0"
description = "Compare images and pinpoint the differences between them."
authors = ["Olivier Bénard"]
license = "MIT"

packages = [{include="differences_between_two_images"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pre-commit = "^2.20.0"
mypy = "^0.971"
pylint = "^2.15.2"
black = "^22.8.0"
dynaconf = "^3.1.9"
opencv-python = "^4.6.0"
keyboard = "^0.13.5"
scipy = "^1.9.1"
scikit-image = "^0.19.3"
setuptools = "^80.9.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
python-multipart = "^0.0.20"
pillow = "^11.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "differences_between_two_images.main:main"
